# fonter

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
public/assets/texts/: phrase1.txt  phrase10.txt  phrase2.txt  phrase3.txt  phrase4.txt  phrase5.txt  phrase6.txt  phrase7.txt  phrase8.txt  phrase9.txt
src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  font_utils.rs  main.rs
src/components/: Icon.tsx  SearchBar.jsx  Sidebar.tsx  menuItems.ts
src/components/common/: Icon.tsx  Tooltip.tsx
src/components/layout/: ContentArea.tsx  MainLayout.tsx  Sidebar.tsx
src/components/views/: FontCard.tsx  FontControls.tsx  FontList.tsx  FontTabs.tsx  SettingsPanel.tsx
src/components/views/tabs/: GlyphsTab.tsx  StylesTab.tsx  WaterfallTab.tsx
src/config/: menuItems.ts
src/config/theme/: ThemeProvider.tsx  themeManager.ts  useTheme.ts
src/hooks/: themeManager.ts  useTheme.ts
src/i18n/: index.ts
src/locales/: en.json  es.json
src/styles/: components.css  globals.css  index.css  layout.css
src/styles/themes/: default.css  minimalist.css
src/themes/: index.css
