[package]
name = "font-viewer"
version = "0.1.0"
description = "A Tauri App to view system fonts"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
font-kit = "0.11.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
